<resources>
    <string name="app_name">Application</string>
    <string name="btn_label">Button</string>
    <string name="hint_txt">Input your name</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_label">Reset</string>
    <string name="button">Button</string>
    <string name="teama">TeamA</string>
    <string name="_0">0</string>
    <string name="btn_resert_label">Resert</string>
</resources>